// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Typography Caption 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 11.375,
          "fontWeight": "300",
          "lineHeight": 19,
        },
        undefined,
      ]
    }
  >
    Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.
  </Text>
</View>
`;

exports[`Storyshots Typography ErrorText 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#dc0451",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
          "fontWeight": "300",
          "lineHeight": 20,
        },
        undefined,
      ]
    }
  >
    Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.
  </Text>
</View>
`;

exports[`Storyshots Typography H1 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="1"
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
        },
        Array [
          Object {
            "fontSize": 42,
            "fontWeight": "500",
            "letterSpacing": -0.4,
          },
          undefined,
        ],
      ]
    }
  >
    HSL Liikuttaa
  </Text>
</View>
`;

exports[`Storyshots Typography H2 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="2"
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
        },
        Array [
          Object {
            "fontSize": 31.5,
            "fontWeight": "500",
            "letterSpacing": -0.4,
          },
          undefined,
        ],
      ]
    }
  >
    HSL Liikuttaa
  </Text>
</View>
`;

exports[`Storyshots Typography H3 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
        },
        Array [
          Object {
            "fontSize": 21,
            "fontWeight": "500",
            "letterSpacing": -0.4,
          },
          undefined,
        ],
      ]
    }
  >
    HSL Liikuttaa
  </Text>
</View>
`;

exports[`Storyshots Typography H4 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="4"
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
        },
        Array [
          Object {
            "fontSize": 18.375,
            "fontWeight": "500",
          },
          undefined,
        ],
      ]
    }
  >
    HSL Liikuttaa
  </Text>
</View>
`;

exports[`Storyshots Typography H5 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="5"
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
        },
        Array [
          Object {
            "fontSize": 14,
            "fontWeight": "500",
          },
          undefined,
        ],
      ]
    }
  >
    HSL LIIKUTTAA
  </Text>
</View>
`;

exports[`Storyshots Typography InfoText 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    strong={false}
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
        },
        Array [
          Object {
            "color": "#8c4799",
            "fontSize": 12.25,
            "fontWeight": "300",
            "lineHeight": 18,
          },
          undefined,
        ],
      ]
    }
  >
    Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.
  </Text>
</View>
`;

exports[`Storyshots Typography Ingress 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
        },
        Array [
          Object {
            "fontFamily": "Gotham XNarrow SSm A, Gotham XNarrow SSm B",
            "fontSize": 15.75,
            "fontWeight": "300",
            "lineHeight": 22,
          },
          undefined,
        ],
      ]
    }
  >
    Omia joukkoliikennelinjoja koskevat linjatiedotteet voi tilata myös sähköpostiin luomalla HSL-tunnuksen. Sitä kautta saa tietoa ajankohtaisista liikennemuutoksista, suunnitelmista ja poikkeustilanteista niiltä linjoilta, joita itse käyttää. Palvelu on maksuton.
  </Text>
</View>
`;

exports[`Storyshots Typography ListText 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "width": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#333333",
            "borderRadius": 875,
            "height": 6.125,
            "justifyContent": "center",
            "marginRight": 17.5,
            "marginVertical": 3.9375,
            "width": 6.125,
          },
          undefined,
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      small={undefined}
      style={
        Array [
          Object {
            "color": "#333333",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
            "fontSize": 12.25,
            "fontWeight": "300",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.
    </Text>
  </View>
</View>
`;

exports[`Storyshots Typography Paragraph 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
          "fontWeight": "300",
          "lineHeight": 20,
        },
        undefined,
      ]
    }
  >
    Omia joukkoliikennelinjoja koskevat linjatiedotteet voi tilata myös sähköpostiin luomalla HSL-tunnuksen. Sitä kautta saa tietoa ajankohtaisista liikennemuutoksista, suunnitelmista ja poikkeustilanteista niiltä linjoilta, joita itse käyttää. Palvelu on maksuton.
  </Text>
</View>
`;

exports[`Storyshots Typography Quote 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#b7b7b7",
          "borderLeftWidth": 3,
          "borderStyle": "solid",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#333333",
            "fontFamily": "Gotham XNarrow SSm A, Gotham XNarrow SSm B",
            "fontSize": 15.75,
            "fontStyle": "italic",
            "fontWeight": "300",
            "lineHeight": 22,
            "paddingBottom": 3,
            "paddingLeft": 20,
            "paddingRight": 0,
            "paddingTop": 3,
          },
          undefined,
        ]
      }
    >
      Omia joukkoliikennelinjoja koskevat linjatiedotteet voi tilata myös sähköpostiin luomalla HSL-tunnuksen. Sitä kautta saa tietoa ajankohtaisista liikennemuutoksista, suunnitelmista ja poikkeustilanteista niiltä linjoilta, joita itse käyttää. Palvelu on maksuton.
    </Text>
  </View>
</View>
`;

exports[`Storyshots Typography default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
          "fontSize": 12.25,
        },
        undefined,
      ]
    }
  >
    HSL Liikuttaa
  </Text>
</View>
`;
